# [1.4.5] - 2019-03-18

## New

- added new images useful in settings (in `assets/img/pm-images`)

# [1.4.4] - 2019-03-15

## New

- added class `dash2x` to make path bigger on SVGs

## Updated/fixes

- added example/fix on icons in `button`/`a`.

# [1.4.3] - 2019-03-12

## New

- added class `rounded50` (`border-radius: 50%`)
- made design system more RTL-friendly (WIP)
- added examples of integration in icons
- added one DO/DONT

## Updated/fixes

- removed duplicate SVG icon
- moved some classes that are specific to design system website
- indentation fixes

# [1.4.2] - 2019-03-11

## Updated/fixes

- used relative path for images (for webpack)
- added documentation for variables
- added missing `!default` on variables of the design system
- updated `styles-pm` comments and “how to use design system” for variables
- indentation fixes


# [1.4.1] - 2019-03-08

## New

- added “domain breadcrumb” styles (in containers)
- added “Information panels” styles (in containers)
- added `#shape-drag` and `#shape-reload` icons (not definitive icons)

## Updated/fixes

- updated asset structure
- fixed overflow on Chrome
- also “fixed” a iOS Safari bug


# [1.3.8] - 2019-03-07

## Updated/fixes

- fixed `padding`s on `block-info-warning`

## Misc

- Added documentation for `unstyled` class

# [1.3.6] - 2019-03-04

## New

- added `.italic` class 
- added SVG sprite for CSS use only (with doc)
- added `.bold` alias for `.strong`
- added animation on `radio`/`checkbox`

## Misc

- Fixed CSP issue on SVG sprite for CSS (Firefox)


# [1.3.5] - 2019-03-01

## New

- added `input type="radio/checkbox/search"` in forms
- added SVG sprite for CSS use only
- added `.strong` and reset for `b` and `strong` 

## Updated/fixes

- `select` enhanced but WIP

## Misc

- moved to Github
- created templates for issues/PR, labels, etc.


# [1.3.4] - 2019-02-18

## New

- added alias `.pm-button-redborder` in buttons
- added all icons
- added `pm-modal--smaller` class and example
