@@ -104,6 +104,21 @@ section: design
     </span>
 </div>
 <div class="flex flex-nowrap onmobile-flex-column mb1">
+    <span class="pm-label">
+    </span>
+    <span>
+        <label for="id_field_osef">
+            <input type="checkbox" class="pm-checkbox" id="id_field_osef" disabled>
+            <span class="pm-checkbox-fakecheck">
+                <svg viewBox="0 0 16 16" class="pm-checkbox-fakecheck-img" aria-hidden="true" role="img" focusable="false">
+                    <use xlink:href="#shape-on"></use>
+                </svg>
+            </span> 
+            This one is disabled
+        </label>
+    </span>
+</div>
+<div class="flex flex-nowrap onmobile-flex-column mb1">
     <span class="pm-label" id="question">
         Do you speak martian?
     </span>
@@ -117,6 +132,17 @@ section: design
             <input type="radio" name="martian" class="pm-radio" id="id_field9" value="nooooo" aria-describedby="question">
             <span class="pm-radio-fakeradio"></span> 
             No
+        </label>
+    </span>
+</div>
+<div class="flex flex-nowrap onmobile-flex-column mb1">
+    <span class="pm-label">
+    </span>
+    <span>
+        <label for="id_field_osefbis">
+            <input type="radio" class="pm-radio" id="id_field_osefbis" disabled>
+            <span class="pm-radio-fakeradio"></span>
+            This one is disabled
         </label>
     </span>
 </div>
