@@ -4,6 +4,10 @@
 
 - added new images useful in settings (in `assets/img/pm-images`)
 
+## Updated/fixes
+
+- added disabled styles for `radio`/`checkbox`
+
 # [1.4.4] - 2019-03-15
 
 ## New
